# screen-watch-ocr

./: .gitignore  README.md  ScreenWatchOCR.spec  config.example.json  launcher.py  pyproject.toml  requirements.txt
src/screen_watch/: app.py  core.py
tests/: test_core.py
