[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "screen-watch-ocr"
version = "0.1.0"
description = "Monitor screen regions with OCR, template, and pixel matching."
requires-python = ">=3.8,<3.13"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
